# fcitx-thai

./: CMakeLists.txt  Thai.kdev4
po/: CMakeLists.txt  fcitx-thai.pot
src/: CMakeLists.txt  fcitx-thai.conf.in  fcitx-thai.desc  fcitx-thai.fxaddon  thai-config.c  thai-internal.h  thai.c  thai.conf.in  thai.h
